tidy code and correct a few errors

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,5 @@
 
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Beautique</title>
@@ -34,7 +29,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="meettheteam.html">Meet The Team</a></li>
 											<li><a href="servicesandtreatments.html">Services and treatments</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
+                      <li><a href="contact.html">Contact</a></li>
 										</ul>
 									</div>
 								</li>
@@ -42,16 +37,14 @@
 						</nav>
 					</header>
 
-
 				<!-- Main -->
 					<article id="contact">
 						<header>
 							<h2>Contact</h2>
-							<!-- <p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p> -->
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-                                <section>
+                <section>
 									<h5>Contact us online today or call 01234 567890</h5>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
@@ -68,7 +61,7 @@
 													<option value="1">Cancellation</option>
 													<option value="1">Leave a Review</option>
 													<option value="1">Complaints</option>
-                                                    <option value="1">Other</option>
+                          <option value="1">Other</option>
 												</select>
 											</div>
 											<div class="col-12">
@@ -76,27 +69,29 @@
 											</div>
 											<div class="col-12">
 												<ul class="actions">
-													<li><input type="submit" value="Send Message" class="primary" /></li>
+													<li><input type="button" value="Send Message" class="primary" /></li>
 													<li><input type="reset" value="Reset" /></li>
 												</ul>
 											</div>
 										</div>
 									</form>
 								</section>
-								
+
 							</div>
 						</section>
 					</article>
+
+          <!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
 								<h2>Opening hours</h2>
-								<p>Tuesday 09:30am–6:30pm<br />
-                                Wednesday 10:30am–7:00pm<br />
-                                Thursday 10:00am–9:00pm<br />
-                                Friday 10:00am-7:00pm<br />
-                                Saturday 9:30am–6:30pm<br />
-                                Closed on Sunday</p>
+                <p>Tuesday 09:30am-6:30pm<br />
+                  Wednesday 10:30am-7:00pm<br />
+                  Thursday 10:00am-9:00pm<br />
+                  Friday 10:00am-7:00pm<br />
+                  Saturday 9:30am-6:30pm<br />
+                  Closed on Sunday</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">01234 567890</a></li>
@@ -106,18 +101,17 @@
 					</section>
      
 				<!-- Footer -->
-                <footer id="footer">
-                    <ul class="icons">
-                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                        <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-                    </ul>
-                    <ul class="copyright">
-                        <li>&copy; <a href="https://www.arriannlee.com" target="_blank">Arriann Lee</a></li><li></li>
-                    </ul>
-                </footer>
-
+        <footer id="footer">
+          <ul class="icons">
+              <li><a href="#footer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+              <li><a href="#footer" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+              <li><a href="#footer" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+              <li><a href="#footer" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+          </ul>
+          <ul class="copyright">
+              <li>&copy;<script>document.write(new Date().getFullYear())</script> <a href="https://www.arriannlee.com" target="_blank">Arriann Lee</a></li>
+          </ul>
+      </footer>
         </div>
 
     <!-- Scripts -->
