--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="meettheteam.html">Meet The Team</a></li>
 											<li><a href="servicesandtreatments.html">Services and treatments</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                            <!-- <li><a href="elements.html">Book Now</a></li> -->
+                      <li><a href="contact.html">Contact</a></li>
 										</ul>
 									</div>
 								</li>
@@ -49,23 +48,6 @@
 						<a href="#two" class="more scrolly">Learn More</a>
 					</section>
 
-				<!-- One -->
-					<!-- <section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
-						</div>
-					</section> -->
-
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
@@ -80,17 +62,17 @@
 								<p>Our experienced and creative stylists are passionate about making you look and feel your best. From classic cuts to trendy styles, we have the expertise to give you the perfect look. Come meet our team and let us transform your hair into a work of art!</p>
 							</div>
 						</section>
-                        <section class="spotlight">
+            <section class="spotlight">
 							<div class="image"><img src="images/coffee.jpg" alt="coffee" /></div><div class="content">
 								<h2>Sit back<br />
-                                relax and enjoy</h2>
+                relax and enjoy</h2>
 								<p>A complimentary hot or cold drink and a head and scalp massage with all treatments.</p>
 							</div>
-                        </section>
+            </section>
 					</section>
 
 				<!-- Three -->
-                    <section id="three" class="wrapper style3 special">
+                    <!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>services and treatments</h2>
@@ -135,19 +117,19 @@
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
 								<h2>Opening hours</h2>
-								<p>Tuesday 09:30am–6:30pm<br />
-                                Wednesday 10:30am–7:00pm<br />
-                                Thursday 10:00am–9:00pm<br />
-                                Friday 10:00am-7:00pm<br />
-                                Saturday 9:30am–6:30pm<br />
-                                Closed on Sunday</p>
+								<p>Tuesday 09:30am-6:30pm<br />
+                Wednesday 10:30am-7:00pm<br />
+                Thursday 10:00am-9:00pm<br />
+                Friday 10:00am-7:00pm<br />
+                Saturday 9:30am-6:30pm<br />
+                Closed on Sunday</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">01234 567890</a></li>
@@ -157,17 +139,17 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; <a href="https://www.arriannlee.com" target="_blank">Arriann Lee</a></li><li></li>
-						</ul>
-					</footer>
+        <footer id="footer">
+          <ul class="icons">
+              <li><a href="#footer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+              <li><a href="#footer" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+              <li><a href="#footer" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+              <li><a href="#footer" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+          </ul>
+          <ul class="copyright">
+              <li>&copy;<script>document.write(new Date().getFullYear())</script> <a href="https://www.arriannlee.com" target="_blank">Arriann Lee</a></li>
+          </ul>
+      </footer>
 
 			</div>
 
