--- a/meettheteam.html
+++ b/meettheteam.html
@@ -1,10 +1,5 @@
 
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Beautique</title>
@@ -75,12 +70,12 @@
 						<div class="inner">
 							<header>
 								<h2>Opening hours</h2>
-								<p>Tuesday 09:30am–6:30pm<br />
-                                Wednesday 10:30am–7:00pm<br />
-                                Thursday 10:00am–9:00pm<br />
-                                Friday 10:00am-7:00pm<br />
-                                Saturday 9:30am–6:30pm<br />
-                                Closed on Sunday</p>
+                <p>Tuesday 09:30am-6:30pm<br />
+                  Wednesday 10:30am-7:00pm<br />
+                  Thursday 10:00am-9:00pm<br />
+                  Friday 10:00am-7:00pm<br />
+                  Saturday 9:30am-6:30pm<br />
+                  Closed on Sunday</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">01234 567890</a></li>
@@ -92,13 +87,13 @@
 				<!-- Footer -->
                 <footer id="footer">
                     <ul class="icons">
-                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                        <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                        <li><a href="#footer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#footer" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                        <li><a href="#footer" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="#footer" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
                     </ul>
                     <ul class="copyright">
-                        <li>&copy; <a href="https://www.arriannlee.com" target="_blank">Arriann Lee</a></li><li></li>
+                        <li>&copy;<script>document.write(new Date().getFullYear())</script> <a href="https://www.arriannlee.com" target="_blank">Arriann Lee</a></li>
                     </ul>
                 </footer>
 
