--- a/servicesandtreatments.html
+++ b/servicesandtreatments.html
@@ -36,17 +36,15 @@
 						</nav>
 					</header>
 
-                    <article id="info">
-						<header>
-							<h2>Services and Treatments</h2>
-						</header>
-                        
-
-                    <section id="three" class="wrapper style5 special">
-						<div class="inner">
-
+          <!-- Info -->
+                  <article id="info">
+                    <header>
+                      <h2>Services and Treatments</h2>
+                    </header>
+                      <section id="three" class="wrapper style5 special">
+		            				<div class="inner">
                             <section>
-                                <h5>Prices may vary depending on the length of hair and complexity of the service required.</h5>
+                                <h5>Prices may vary depending on the length of hair and complexity of the service required</h5>
                                 <div class="table-wrapper">
                                     <table>
                                         <thead>
@@ -142,11 +140,6 @@
                                                 <td>Brazilian Hair</td>
                                                 <td>from £520</td>
                                             </tr>
-                                            <!-- <tr>
-                                                <td>SPECIAL OCCASION</td>
-                                                <td>Price on Consultation</td>
-                                                <td>£0</td>
-                                            </tr> -->
                                        </tbody>
                                         <tfoot>
                                             <tr>
@@ -164,12 +157,12 @@
 						<div class="inner">
 							<header>
 								<h2>Opening hours</h2>
-								<p>Tuesday 09:30am–6:30pm<br />
-                                Wednesday 10:30am–7:00pm<br />
-                                Thursday 10:00am–9:00pm<br />
-                                Friday 10:00am-7:00pm<br />
-                                Saturday 9:30am–6:30pm<br />
-                                Closed on Sunday</p>
+                <p>Tuesday 09:30am-6:30pm<br />
+                  Wednesday 10:30am-7:00pm<br />
+                  Thursday 10:00am-9:00pm<br />
+                  Friday 10:00am-7:00pm<br />
+                  Saturday 9:30am-6:30pm<br />
+                  Closed on Sunday</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">01234 567890</a></li>
@@ -179,17 +172,17 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; <a href="https://www.arriannlee.com" target="_blank">Arriann Lee</a></li><li></li>
-						</ul>
-					</footer>
+        <footer id="footer">
+          <ul class="icons">
+              <li><a href="#footer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+              <li><a href="#footer" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+              <li><a href="#footer" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+              <li><a href="#footer" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+          </ul>
+          <ul class="copyright">
+              <li>&copy;<script>document.write(new Date().getFullYear())</script> <a href="https://www.arriannlee.com" target="_blank">Arriann Lee</a></li>
+          </ul>
+      </footer>
 
 			</div>
 
